<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="30dp"
    android:orientation="vertical"
    tools:context=".Activities.NavDrawer">

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/publicationTitle"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publicationTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/titleEditPublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>



            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/publicationDescription"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/publicationDescription"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionEditPublication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <TextView
                android:id="@+id/text_view_id"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:text="@string/publicationType" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/radio_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton android:id="@+id/radio_adoption"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:text="@string/adoptionType"
                  />

                <RadioButton android:id="@+id/radio_losing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/losingType"
                   />
            </RadioGroup>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/publicationCity"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/publicationCity">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/publicationEditCity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>




                      </LinearLayout>

    </ScrollView>

</LinearLayout>
